--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,13 +1,20 @@
 cmake_minimum_required(VERSION 3.18)
 project(demo)
 
-# Include directories for TensorFlow Lite
+# Inclua os diretórios necessários para TensorFlow Lite
 set(TFLITE_DIR "/home/aldo/tensorflow/tensorflow/lite")
-include_directories(${TFLITE_DIR})
-include_directories(${TFLITE_DIR}/tools/make/downloads/flatbuffers/include)
-link_directories(${TFLITE_DIR}/tools/make/gen/linux_aarch64/lib)
+include_directories(
+    ${TFLITE_DIR}
+    ${TFLITE_DIR}/tools/make/downloads/flatbuffers/include
+    /usr/local/include  # FFTW
+)
 
-# Source and header files
+link_directories(
+    ${TFLITE_DIR}/tools/make/gen/linux_aarch64/lib
+    /usr/local/lib  # FFTW
+)
+
+# Arquivos fonte e cabeçalhos
 set(SOURCES
     demo.cpp
     ModelLoader.cpp
@@ -22,23 +29,19 @@ set(HEADERS
     evm.hpp
 )
 
-# Add executable
+# Adiciona o executável
 add_executable(${PROJECT_NAME} ${SOURCES} ${HEADERS})
 
-# Find OpenCV
+# Encontrar OpenCV (opcional, se necessário especificamente aqui)
 find_package(OpenCV REQUIRED)
 include_directories(${OpenCV_INCLUDE_DIRS})
 
-# Include FFTW directories
-include_directories(/usr/local/include)
-link_directories(/usr/local/lib)
-
-# Link libraries
+# Linkar bibliotecas
 target_link_libraries(${PROJECT_NAME} PRIVATE 
     ${OpenCV_LIBS}
     tensorflow-lite
     dl
     pthread
-    fftw3  # Use the library name directly
+    fftw3  # Nome da biblioteca diretamente
 )
 
