--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -21,7 +21,7 @@ set(SOURCES
     DetectionPostProcess.cpp
     FaceDetection.cpp
     SignalProcessor.cpp
-    evm.cpp
+    #evm.cpp
     Database.cpp
     evmBlur.cpp
 )
@@ -30,7 +30,7 @@ set(HEADERS
     DetectionPostProcess.hpp
     FaceDetection.hpp
     SignalProcessor.hpp
-    evm.hpp
+    #evm.hpp
     Database.hpp
     evmBlur.hpp
 )
